# rt-plotter-sdl

./: .gitignore  CMakeLists.txt  README.md  UdpSocket.h  WinUdpClient.h  args-parsing.cpp  args-parsing.h  colors.cpp  fsrs.cpp  linux-serial.cpp  magsensor.cpp  magsensor.h  main.cpp  ppp-parsing.cpp  ppp-parsing.h  rt-plotter-sdl.sln  sauron-eye-closedform-ik.h  u32_fmt_t.h  winserial.cpp  winserial.h
Python/: serial_transmitter.py
Python/DataLogging/: csvReader.py  log_plotter.py  logging-example.bat
Setup1/: Setup1.vdproj
Setup1/Release/: rt-plotter-sdl.msi
rt-plotter-sdl/: WinUdpClient.h  args-parsing.cpp  args-parsing.h  colors.cpp  fsrs.cpp  fsrs.h  main.cpp  ppp-parsing.h  rt-plotter-sdl.vcxproj  rt-plotter-sdl.vcxproj.filters  sauron-eye-closedform-ik.cpp  trig_fixed.cpp  trig_fixed.h
rt-plotter-sdl/Release/rt-plotter-sdl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  rt-plotter-sdl.lastbuildstate
rt-plotter-sdl/x64/Debug/: rt-plotter-sdl.exe.recipe  rt-plotter-sdl.ilk  vc142.idb
rt-plotter-sdl/x64/Debug/rt-plotter-sdl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rt-plotter-sdl.lastbuildstate
rt-plotter-sdl/x64/Release/: rt-plotter-sdl.exe.recipe  rt-plotter-sdl.iobj  rt-plotter-sdl.ipdb
rt-plotter-sdl/x64/Release/rt-plotter-sdl.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rt-plotter-sdl.lastbuildstate
src/: CMakeLists.txt  Main.cpp  args-parsing.cpp  args-parsing.h  colors.h  fsrs.cpp  fsrs.h  linux-serial.cpp  linux-serial.h  main.cpp  main2.cpp  ppp-parsing.cpp  winserial.cpp
vsproj/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  rt-plotter-sdl.sln  rt-plotter-sdl.vcxproj  rt-plotter-sdl.vcxproj.filters
vsproj/rt-plotter-sdl.dir/Debug/: rt-plotter-sdl.exe.recipe  rt-plotter-sdl.ilk
vsproj/rt-plotter-sdl.dir/Debug/rt-plotter-sdl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rt-plotter-sdl.lastbuildstate
